--------------------
Bazaar Release Notes
--------------------

.. contents::


IN DEVELOPMENT
--------------

  CHANGES:

  NEW FEATURES:

  IMPROVEMENTS:

  BUG FIXES:
  
   * Allow BzrDir implementation to implement backing up of 
     control directory. (#139691)

    * Fix SystemError in ``_patiencediff_c`` module by calling
      PyErr_NoMemory() before returning NULL in PatienceSequenceMatcher_new.
      (Andrew Bennetts, #303206)

    * Give proper error message for diff with non-existent dotted revno.
      (Marius Kruger, #301969)

    * ``Transport.readv()`` defaults to not reading more than 100MB in a
      single array. Further ``RemoteTransport.readv`` sets this to 5MB to
      work better with how it splits its requests.
      (John Arbash Meinel, #303538)

  DOCUMENTATION:

  API CHANGES:

  TESTING:

  INTERNALS:

    * ``KnitVersionedFiles.get_record_stream()`` will now chose a
      more optimal ordering when the keys are requested 'unordered'.
      Previously the order was fully random, now the records should be
      returned from each pack in turn, in forward I/O order.
      (John Arbash Meinel)


bzr 1.10 2008-12-05
-------------------

Bazaar 1.10 has several performance improvements for copying revisions
(especially for small updates to large projects).  There has also been a
significant amount of effort in polishing stacked branches.  The commands
``shelve`` and ``unshelve`` have become core commands, with an improved
implementation.

The only changes versus bzr-1.10rc1 are bugfixes for stacked branches.

  BUG FIXES:

    * Don't set a pack write cache size from RepoFetcher, because the
      cache is not coherent with reads and causes ShortReadvErrors.
      This reverses the change that fixed #294479.
      (Martin Pool, #303856)

    * Properly handle when a revision can be inserted as a delta versus
      when it needs to be expanded to a fulltext for stacked branches.